# libprg

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
libprg/: CMakeLists.txt
libprg/src/include/libprg/: libprg.h  mytypes.h  sub.h  sum.h
libprg/src/libprg/: alg_ord_troca.c  arvore_avl.c  arvore_binaria.c  dicionario.c  fila.c  libprg.c  lista_encadeada.c  lista_encadeada_dupla.c  lista_linear.c  lista_ordenada.c  pilha.c  sub.c  sum.c
